--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,244 +1,12 @@
 <html>
 <head>
-    <title>HMI Annotation</title>
+    <title>HMI </title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <style>
-        body {
-            font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande",
-            sans-serif;
-            font-weight: 300;
-            letter-spacing: .05rem;
-        }
-
-        textarea {
-            font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande",
-            sans-serif;
-            font-size: 16px;
-            line-height: 24px;
-        padding: 5px;
-        }
-
-        .paragraph {
-            padding: 10px 0 20px 0;
-        }
-
-        .sentence {
-            border-top: 1px solid #ddd;
-            padding: 10px 0 10px 0;
-        }
-
-        .phrase {
-            border-bottom: 1px dashed #eee;
-            margin: 5px 0 5px 0;
-        padding: 5px 0 5px 0;
-            background-color: #fefefe;
-        }
-
-        .word {
-            margin: 8px 0 8px 0;
-            padding: 2px 1px 2px 3px;
-            background-color: #fff;
-            cursor: pointer;
-            line-height: 24px;
-        }
-
-        .word.entity {
-            color: #ccc;
-            background-color: #444;
-        }
-
-        .word:hover {
-            background-color: #333;
-            color: #fff;
-        }
-
-        #ui2 {
-            display: none;
-        }
-
-        #info {
-            display: none;
-            background-color: #333;
-            position: fixed;
-            padding: 4px;
-            color: #fff;
-            font-size: 17px;
-        }
-
-        .CC { background-color: #ffd; }
-        .CD { background-color: #ffa; }
-        .DT { background-color: #fff; }
-        .EX { background-color: #ff6; }
-        .FW { background-color: #ff4; }
-        .IN { background-color: #ff2; }
-        .JJ { background-color: #fef; }
-        .JJR { background-color: #fdf; }
-        .JJS { background-color: #faf; }
-        .LS { background-color: #f8f; }
-        .MD { background-color: #f6f; }
-        .NN { background-color: #fdd; }
-        .NNS { background-color: #faa; }
-        .NNP { background-color: #f87; }
-        .NNPS { background-color: #f86; }
-        .PDT { background-color: #dff; }
-        .POS { background-color: #aff; }
-        .PRP { background-color: #8ff; }
-        .PRP$ { background-color: #7ff; }
-        .RB { background-color: #5cf; }
-        .RBR { background-color: #2af; }
-        .RBS { background-color: #1af; }
-        .RP { background-color: #fff; }
-        .SYM { background-color: #fff; }
-        .TO { background-color: #fff; }
-        .UH { background-color: #fff; }
-        .VB { background-color: #fff; }
-        .VBD { background-color: #8f8; }
-        .VBG { background-color: #7f7; }
-        .VBN { background-color: #6f6; }
-        .VBP { background-color: #3a3; }
-        .VBZ { background-color: #191; }
-        .WDT { background-color: #eee; }
-        .WP { background-color: #ddd; }
-        .WP$ { background-color: #ccc; }
-        .WRB { background-color: #bbb; }
-
-    </style>
 </head>
 <body>
-<div id="ui1">
-    <textarea rows="20" cols="100" id="txt">NEW ORLEANS &mdash; The federal government and the Gulf Coast states have reached a tentative deal with the British oil company BP for it to pay about $18.7 billion, the largest environmental settlement in American history, to compensate for damages from the 2010 Deepwater Horizon oil spill, federal, state and company officials said Thursday.
-
-An American BP subsidiary, BP Exploration and Production, will pay at least $7.1 billion, and possibly more, to the federal government and the states of Louisiana, Alabama, Mississippi, Texas and Florida, for damage to natural resources; $5.5 billion in penalties to the federal government for violation of the Clean Water Act; $4.9 billion to the states to compensate for harm to their economies; and up to $1 billion to more than 400 local governments.
-
-Researchers recorded data and photographed a dead dolphin stranded along the coastline at Port Fourchon, La., in 2012.
-    </textarea><br>
-    <button id="btn">Submit</button>
-</div>
-<div id="ui2">
-    <button id="back">Back</button>
-</div>
-<div id="root">
-
-</div>
-<div id="info">
-
-</div>
 </body>
 <script>
-    var $root = $("#root");
-    var $info = $("#info");
-    var $ui1 = $("#ui1");
-    var $ui2 = $("#ui2");
 
-    $("#btn").click(function () {
-        var ts = $("#txt").val();
-        $ui1.hide();
-        $.ajax({url: 'http://localhost:4567/annotate?s=' + encodeURIComponent(ts), method: 'get'}).done(function (r) {
-            $ui2.show();
-            $root.empty();
-            $root.show();
-            //console.log("!",JSON.parse(r));
-            var p = JSON.parse(r).document;
-            $(document.body).append($root);
-            p.forEach(function (q) {
-                var $pp = $("<div></div>").addClass("paragraph");
-                $root.append($pp);
-                q.forEach(function (r) {
-                    var $sent = $("<div></div>").addClass("sentence");
-                    $pp.append($sent);
-                    r.forEach(function (s) {
-                        var $phr = $("<div></div>").addClass("phrase");
-                        $sent.append($phr);
-                        s.forEach(function (t) {
-                            var $w = $("<a></a>").addClass("word");
-                            $phr.append($w, " ");
-                            $w.text(t.text);
-                            if (t.entity)
-                                $w.addClass("entity");
-                            $w.addClass(t.pos);
-                            $w.mouseover(function () {
-                                var p = $w.offset();
-                                $info.css({top: (p.top + 20 - $(window).scrollTop()) + "px", left: p.left + "px"});
-                                $info.empty();
-                                var tt = "";
-                                if (t.entity)
-                                    tt = t.entity + " / ";
-                                if (t.pos)
-                                    if (pos_key[t.pos])
-                                        tt += pos_key[t.pos];
-                                    else
-                                        tt += t.pos;
-                                tt += "<br>"
-                                if (t.syllables) {
-                                    t.syllables.forEach(function (u) {
-                                        tt += u.join(" ") + " - ";
-                                    });
-                                    tt = tt.substring(0, tt.length - 2);
-                                }
-                                $info.html(tt);
-                                $info.show();
-                            });
-                            $w.mouseout(function () {
-                                $info.hide();
-                            });
-                        });
-                    });
-                });
-            });
-        }).error(function (err) {
-            console.error(err);
-        });
-    });
-    $("#back").click(function () {
-        $ui1.show();
-        $ui2.hide();
-        $info.hide();
-        $root.empty();
-        $root.hide();
-    });
-
-
-
-
-
-var pos_key = {
-    "CC": "Coordinating conjunction",
-    "CD": "Cardinal number",
-    "DT": "Determiner",
-    "EX": "Existential there",
-    "FW": "Foreign word",
-    "IN": "Preposition or subordinating conjunction",
-    "JJ": "Adjective",
-    "JJR": "Adjective, comparative",
-    "JJS": "Adjective, superlative",
-    "LS": "List item marker",
-    "MD": "Modal",
-    "NN": "Noun, singular or mass",
-    "NNS": "Noun, plural",
-    "NNP": "Proper noun, singular",
-    "NNPS": "Proper noun, plural",
-    "PDT": "Predeterminer",
-    "POS": "Possessive ending",
-    "PRP": "Personal pronoun",
-    "PRP$": "Possessive pronoun",
-    "RB": "Adverb",
-    "RBR": "Adverb, comparative",
-    "RBS": "Adverb, superlative",
-    "RP": "Particle",
-    "SYM": "Symbol",
-    "TO": "to",
-    "UH": "Interjection",
-    "VB": "Verb, base form",
-    "VBD": "Verb, past tense",
-    "VBG": "Verb, gerund or present participle",
-    "VBN": "Verb, past participle",
-    "VBP": "Verb, non 3rd person singular present",
-    "VBZ": "Verb, 3rd person singular present",
-    "WDT": "Wh determiner",
-    "WP": "Wh pronoun",
-    "WP$": "Possessive wh pronoun",
-    "WRB": "Wh adverb",
-}
 
 </script>
 </html>
