--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -12,6 +12,9 @@
     <script src="/js/lib/wavesurfer.minimap.min.js"></script>
     <script>var sm = {{{speechMarkupJson}}};</script>
     <script src="/js/view.js"></script>
+    <style>
+.wavesurfer-handle-start { border-right: 1px solid red; }
+    </style>
 </head>
 
 <body>
